Fix letter-spacing value in App.css

--- a/src/App.css
+++ b/src/App.css
@@ -87,7 +87,7 @@ header {
   padding: 6px 30px 6px 0;
   font-size: 15px;
   color: #555;
-  letter-spacing: 0,7px;
+  letter-spacing: 0.7px;
 
 }
 
